--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
+    "deploy": "next build && next export && gh-pages -d out",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,5 +18,8 @@
     "react-icons": "^5.4.0",
     "sass": "^1.84.0",
     "swiper": "^11.2.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
